# polygon_rollup

./: README.md
rollup_task/: Cargo.toml
rollup_task/src/: aggregator.rs  client.rs  main.rs  main_chain.rs  server.rs  shared.rs
