[package]
name = "rollup_task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"]}
bincode = "1.3.3"
k256 = "0.13.1"
sha2 = "0.10.7"
merkle = "1.11.0"
serde = { version = "1.0.188" , features = ["derive"]}
ring = "0.16.20"
rand = "0.8.5"
bs58 = "0.5.0"
chrono = "0.4.30"